# Fin-F1

./: .gitignore  Dockerfile  README.md  compose.yaml  docker-compose.debug.yml  docker-compose.yml  load-split.ipynb  pyproject.toml  rag_implementation.py  requirements.txt  test.txt
chatbot/: app.py  rag_implementation.py
docs/: SAP-AI-Ethics-Handbook.pdf:Zone.Identifier  arush_data.pdf:Zone.Identifier
documentation/: Fin-F1 Documentation.md  Introducer-App Documentation.md
src/: app.py  load_split.ipynb  rag_implementation.py
src/vector_db/: chroma.sqlite3
vector_db/: chroma.sqlite3
